# crris

./: .gitignore  README.md
binance-bot/: Cargo.toml
binance-bot/src/: lib.rs  main.rs
cex-dex-monitor/: Cargo.toml
cex-dex-monitor/scripts/: syncExeRemote.sh
cex-dex-monitor/src/: balance_monitor.rs  lib.rs  main.rs
cex-dex-monitor/src/cexdexclient/: client.rs  dto.rs  mod.rs
cex-dex-monitor/src/slackclient/: client.rs  mod.rs  test.rs
github-analyze/: Cargo.toml
github-analyze/src/: main.rs
google-sheet-test/: Cargo.toml  README.md
google-sheet-test/src/: auth.rs  config.rs  main.rs
mesage-server/: Cargo.toml  README.md  docker-compose.yaml  run.sh
mesage-server/http/: get_message.http  post_message.http
mesage-server/migrations/2023-03-13-174406_create_messages/: up.sql
mesage-server/src/: db.rs  dto.rs  main.rs  schema.rs
minigrep/: test.txt
minigrep/src/: lib.rs  main.rs
shared-gg-tasks/: Cargo.toml  README.md  token-1.json  token-2.json
shared-gg-tasks/src/: ggtask_client.rs  main.rs
to-do-cmd/: Cargo.toml
to-do-cmd/src/: cli.rs  main.rs  task.rs
tpp-slack-bot/: Cargo.toml  README.md  architecture.d2
tpp-slack-bot/src/: config.rs  main.rs
tpp-slack-bot/src/binanceclient/: client.rs  mod.rs  test.rs
tpp-slack-bot/src/slackclient/: client.rs
tpp-slack-bot/src/tokiolog/: logger.rs
wall-e/: .gitignore  Cargo.toml  README.md
wall-e/src/: config.rs  gg_sheet.rs  main.rs  tailscale.rs  tele_handler.rs  telegram_handler.rs
webserver/src/: main.rs
websever-threadpool/: Cargo.toml
websever-threadpool/src/: lib.rs  main.rs
year-bar/: Cargo.toml
year-bar/src/: main.rs
