[package]
name = "binance-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version= "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
hmac = "0.11.0"
sha2 = "0.9"
hex = "0.4"
tokio-tungstenite = {version = "*", features = ["native-tls"]}
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
anyhow = "*"
url = "*"
futures_channel = "*"
