[package]
name = "google-sheet-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
google-sheets4 = "5.0.2"
hyper = "0.14.26"
hyper-rustls = "0.24.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.28.2", features = ["macros", "io-util", "rt", "fs", "rt-multi-thread"] }
