[package]
name = "shared-gg-tasks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-tasks1 = "5.0.2"
hyper = "0.14.26"
hyper-rustls = "0.24.0"
serde = "^1.0"
serde_json = "^1.0"
tokio = { version = "1.28.0", features = ["full"] }
