[package]
name = "wall-e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = "0.4.26"
chrono-tz = "0.8.3"
google-sheets4 = "5.0.2"
hyper = "0.14.27"
hyper-rustls = "0.24.1"
log = "0.4.19"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.29.0", features = ["rt-multi-thread", "macros"] }
